feat: Attach an image to an activity MEED-2030- Meeds-io/MIPs#53 (#2516)
This task add a new ckeditor plugin allows to attach images to an
activity from the rich text editor.

---------

Co-authored-by: Boubaker Khanfir <boubaker.khanfir@exoplatform.com>