@@ -16,11 +16,19 @@
 package org.exoplatform.social.core.metadata.storage;
 
 import java.math.BigInteger;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Date;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+
+import javax.persistence.Tuple;
 
 import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
+
 import org.exoplatform.services.log.ExoLogger;
 import org.exoplatform.services.log.Log;
 import org.exoplatform.social.core.jpa.storage.dao.jpa.MetadataDAO;
@@ -32,8 +40,6 @@ import org.exoplatform.social.metadata.model.MetadataItem;
 import org.exoplatform.social.metadata.model.MetadataKey;
 import org.exoplatform.social.metadata.model.MetadataObject;
 import org.exoplatform.social.metadata.model.MetadataType;
-
-import javax.persistence.Tuple;
 
 public class MetadataStorage {
 
@@ -112,7 +118,7 @@ public class MetadataStorage {
     if (CollectionUtils.isEmpty(metadataItemEntities)) {
       return Collections.emptyList();
     }
-    return metadataItemEntities.stream().map(this::fromEntity).collect(Collectors.toList());
+    return metadataItemEntities.stream().map(this::fromEntity).toList();
   }
 
   public List<MetadataItem> getMetadataItemsByMetaDataTypeAndCreator(long metadataType, long creatorId, long offset, long limit) {
@@ -123,7 +129,7 @@ public class MetadataStorage {
     if (CollectionUtils.isEmpty(metadataItemEntities)) {
       return Collections.emptyList();
     }
-    return metadataItemEntities.stream().map(this::fromEntity).collect(Collectors.toList());
+    return metadataItemEntities.stream().map(this::fromEntity).toList();
   }
 
   public int countMetadataItemsByMetadataTypeAndCreator(long metadataType, long creatorId) {
@@ -144,11 +150,10 @@ public class MetadataStorage {
   public Map<Long, Long> countMetadataItemsByMetadataTypeAndSpacesIdAndCreatorId(long metadataType,
                                                                                  long creatorId,
                                                                                  List<Long> spacesIds) {
-    Map<Long, Long> metadataCountBySpace = metadataItemDAO.countMetadataItemsByMetadataTypeAndSpacesIdAndCreatorId(metadataType,
-                                                                                                                   creatorId,
-                                                                                                                   spacesIds);
+    return metadataItemDAO.countMetadataItemsByMetadataTypeAndSpacesIdAndCreatorId(metadataType,
+                                                                                   creatorId,
+                                                                                   spacesIds);
 
-    return metadataCountBySpace;
   }
 
   public List<MetadataItem> getMetadataItemsByMetadataNameAndTypeAndObject(String metadataName,
@@ -166,7 +171,7 @@ public class MetadataStorage {
     if (CollectionUtils.isEmpty(metadataItemEntities)) {
       return Collections.emptyList();
     }
-    return metadataItemEntities.stream().map(this::fromEntity).collect(Collectors.toList());
+    return metadataItemEntities.stream().map(this::fromEntity).toList();
   }
 
   public List<MetadataItem> getMetadataItemsByMetadataNameAndTypeAndObject(String metadataName,
@@ -224,7 +229,7 @@ public class MetadataStorage {
     if (CollectionUtils.isEmpty(metadataItemEntities)) {
       return Collections.emptyList();
     }
-    return metadataItemEntities.stream().map(this::fromEntity).collect(Collectors.toList());
+    return metadataItemEntities.stream().map(this::fromEntity).toList();
   }
 
   public MetadataItem deleteMetadataItemById(long id) {
@@ -262,7 +267,7 @@ public class MetadataStorage {
     for (MetadataItemEntity metadataItemEntity : metadataItemEntities) {
       deleteMetadataItemById(metadataItemEntity.getId());
     }
-    return metadataItemEntities.stream().map(this::fromEntity).collect(Collectors.toList());
+    return metadataItemEntities.stream().map(this::fromEntity).toList();
   }
 
   public List<MetadataItem> deleteByMetadataTypeAndCreatorId(long metadataType, long userIdentityId) {
@@ -278,7 +283,7 @@ public class MetadataStorage {
     if (CollectionUtils.isEmpty(metadataItemEntities)) {
       return Collections.emptyList();
     }
-    return metadataItemEntities.stream().map(this::fromEntity).collect(Collectors.toList());
+    return metadataItemEntities.stream().map(this::fromEntity).toList();
   }
 
   public List<MetadataItem> getMetadataItemsByMetadataTypeAndObject(String metadataTypeName, MetadataObject object) {
@@ -289,7 +294,7 @@ public class MetadataStorage {
     if (CollectionUtils.isEmpty(metadataItemEntities)) {
       return Collections.emptyList();
     }
-    return metadataItemEntities.stream().map(this::fromEntity).collect(Collectors.toList());
+    return metadataItemEntities.stream().map(this::fromEntity).toList();
   }
 
   public Set<String> getMetadataNamesByObject(MetadataObject object) {
@@ -331,7 +336,17 @@ public class MetadataStorage {
     if (CollectionUtils.isEmpty(metadataItemEntities)) {
       return Collections.emptyList();
     }
-    return metadataItemEntities.stream().map(this::fromEntity).collect(Collectors.toList());
+    return metadataItemEntities.stream().map(this::fromEntity).toList();
+  }
+
+  public List<MetadataItem> getMetadataItemsByMetadataTypeAndObject(long metadataType, MetadataObject object) {
+    List<MetadataItemEntity> metadataItemEntities = metadataItemDAO.getMetadataItemsByMetadataTypeAndObject(metadataType,
+        object.getType(),
+        object.getId());
+    if (CollectionUtils.isEmpty(metadataItemEntities)) {
+      return Collections.emptyList();
+    }
+    return metadataItemEntities.stream().map(this::fromEntity).toList();
   }
 
   public List<String> getMetadataObjectIds(String metadataTypeName,
@@ -361,7 +376,7 @@ public class MetadataStorage {
   public List<Metadata> getMetadatas(String metadataTypeName, long limit) {
     MetadataType metadataType = getMetadataTypeWithCheck(metadataTypeName);
     List<MetadataEntity> metadatasEntities = metadataDAO.getMetadatas(metadataType.getId(), limit);
-    return metadatasEntities.stream().map(this::fromEntity).collect(Collectors.toList());
+    return metadatasEntities.stream().map(this::fromEntity).toList();
   }
 
   public List<Metadata> getMetadatasByProperty(String propertyKey, String propertyValue, long limit) {
@@ -375,7 +390,7 @@ public class MetadataStorage {
         }
       }
     }
-    return metadatasEntities.stream().map(this::fromEntity).collect(Collectors.toList());
+    return metadatasEntities.stream().map(this::fromEntity).toList();
   }
 
   public MetadataType getMetadataType(String name) {
